# slog

./: .gitignore  CHANGELOG.md  README.rst  mypy.ini  pyproject.toml  setup.cfg
slog/: __init__.py  __main__.py  cli.py  enums.py  logs.py  paths.py  utils.py  version.py
slog/tests/: __init__.py  test_cli.py  test_enums.py  test_logs.py  test_paths.py  test_utils.py
