[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "slog"
version = "0.9.1"
description = "Extends the built-in Python logging module with some convenient functions and custom log levels."
authors = [
    "David C. Stauffer <dstauffman@yahoo.com>"
]
license = "LGPL 3.0"
readme = "README.rst"
python = "^3.6"
homepage = "https://github.com/dstauffman/slog"
repository = "https://github.com/dstauffman/slog"
documentation = "https://github.com/dstauffman/slog"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]
[tool.poetry]
name = "slog"
version = "0.9.1"
description = "Extended Python logging utilities"
authors = ["David C. Stauffer <dstauffman@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
black = {version = "^22.0.0", optional = true}
isort = {version = "^5.9.3", optional = true}
pylint = {version = "^2.0.0", optional = true}
PySide6 = {version = "^6.3.0", optional = true}
pytest = {version = "^6.2.4", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
static = ["black", "flake8", "isort", "pycodestyle", "pylint", "mypy"]

[tool.black]
line-length = 128
target_version = ["py39"]

[tool.isort]
py_version = 39
profile = "black"
line_length = 128
combine_as_imports = true
force_sort_within_sections = true
case_sensitive = true
force_alphabetical_sort_within_sections = true
skip_glob = ["__init__.py", "*/__init__.py"]

